<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.khanu263.dopplereffectcalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/text_welcome"
            android:textStyle="bold"
            android:textColor="#000000"
            android:id="@+id/text_welcome"
            android:singleLine="false"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/text_originalFrequency"
            android:id="@+id/text_signal_freq"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edit_hint_originalFrequency"
            android:maxLength="3"
            android:ems="10"
            android:id="@+id/edit_freq"
            android:layout_marginTop="7dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/text_temperature"
            android:id="@+id/text_signal_temp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edit_hint_temperature"
            android:maxLength="3"
            android:ems="10"
            android:id="@+id/edit_temp"
            android:layout_marginTop="7dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/text_vel_o"
            android:id="@+id/text_signal_vel_o"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/edit_hint_vel_o"
            android:maxLength="3"
            android:ems="10"
            android:id="@+id/edit_vel_o"
            android:layout_marginTop="7dp"/>

    </LinearLayout>

</RelativeLayout>
